Added offsets of the actual loaded progam load map

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "MEMMNG.C": "cpp",
-        "FILEMNG.C": "cpp"
+        "FILEMNG.C": "cpp",
+        "QUEUE.C": "cpp"
     }
 }
