--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "MEMMNG.C": "cpp",
         "FILEMNG.C": "cpp",
-        "QUEUE.C": "cpp"
+        "QUEUE.C": "cpp",
+        "linked_header_MEMMNG.C": "cpp",
+        "linked_header_FILEMNG.C": "cpp"
     }
 }
